--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/dashboard.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/dashboard.html.twig
@@ -7,6 +7,28 @@
                 <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
                 <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
 
+                <div id="myModal" class="modal fade" tabindex="-1" role="dialog" data-keyboard="false" data-backdrop="static">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Mise à jour Sesile {{ sesile_version }}</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="alert alert-info" role="alert">
+                                    <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                                    <strong>
+                                        Afin que cette vidéo ne s'affiche plus vous devez la regarder entièrement puis cliquer sur 'Ok' à la fin de celle-ci
+                                    </strong>
+                                </div>
+                                <div id="player"></div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary" id="MajOk">Ok</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 {#<object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0" style="display: none;"></object>#}
                 <div id="classeurs_a_valider">
                     <div class="titre_bloc_accueil">
@@ -39,4 +61,60 @@
             {% endif %}
         </div>
     </div>
+    <script type="text/javascript">
+        {% if sesile_version > user_version  %}
+        var done = false;
+        $(window).on('load',function() {
+            $('#myModal').modal('show');
+            done = true;
+            $('#myModal button').click(function () {
+                $.ajax({
+                    url: "{{ path('classeur_updateUserSesile') }}",
+                    type: 'POST',
+                    data: {'current_sesile_version': {{ sesile_version }} },
+                    dataType: 'json',
+                    success: function(json){
+                        $('#myModal iframe').removeAttr('src');
+                        $('#myModal').modal('toggle');
+                    }
+                });
+            });
+
+        });
+
+        var tag = document.createElement('script');
+
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        var player;
+        function onYouTubeIframeAPIReady() {
+            player = new YT.Player('player', {
+                width: '540',
+                height: '315',
+                videoId: '{{ id_video_yt }}',
+                playerVars: { 'autoplay': 1, 'controls': 1, 'disablekb': 1, 'modestbranding': 1, 'rel': 0, 'showinfo': 0},
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+        function onPlayerReady(event) {
+            $('#myModal button').prop('disabled', true);
+            if(done === true) event.target.playVideo();
+        }
+
+        function onPlayerStateChange(event) {
+            if (event.data === YT.PlayerState.ENDED) {
+                $('#myModal button').prop('disabled', false);
+            }
+            else {
+                $('#myModal button').prop('disabled', true);
+            }
+        }
+        {% endif %}
+    </script>
 {% endblock %}
