[Fix] #272 - A étudier par la démat : équivalent de copier à

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/copyedit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/copyedit.html.twig
@@ -1,7 +1,7 @@
-<div class="row" id="circuit_main">
-    <div id="circuit_etapes" >
-        <div id="circuit_with_js">
-            <div id="contetapes" class="ui-sortable">
+<div class="row col-lg-12" id="circuit_main_copy">
+    <div id="circuit_etapes_copy" >
+        <div id="circuit_with_js_copy">
+            <div id="contetapes_copy" class="ui-sortable">
                 <div class="col-lg-2 well etapes-circuit">
                     <div class="text-center"><h4>Utilisateurs</h4></div>
                     <select class="userscopy" multiple="multiple" style="width: 100%" id="listUsersCopy" name="usersCopy[]" {% if classeur.status != 0 %}disabled="disabled"{% endif %}>
