[Fix] #236 - Revoir le système d'appairage d'un certificat
 - Pas de trombonne si l'utilisateur n'a pas laissé l'accès aux certificats depuis son navigateur

--- a/src/Sesile/UserBundle/Resources/views/Default/certificate.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/certificate.html.twig
@@ -6,7 +6,7 @@
             <span class="glyphicon glyphicon-folder-open"></span>
             &nbsp;&nbsp;&nbsp;Gestion du certificat d'un utilisateur
         </div>
-        {% if app.request.server.get('HTTP_X_SSL') %}
+        {% if app.request.server.get('HTTP_X_SSL_CLIENT_SHA1') %}
             {% if certifCAS == certificatevalue %}
                 <div class="row row-padding">
                     <div class="col-lg-8 col-lg-push-2 text-center alert alert-success">
