--- a/app/Resources/views/app.html.twig
+++ b/app/Resources/views/app.html.twig
@@ -3,6 +3,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="{{ asset('build/global.css') }}">
+        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
     </head>
     <body>
         <div id="app"></div>
