[Evo] #1608 - Validation circuit list of the local authority
- Fix bug in backend of multiples routes namings
- Add validation circuit controller 
- Add validation circuit component in front with a circuit list and search by circuit name and user name

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -416,3 +416,14 @@ html {
   margin-top: 0.5em;
   margin-left: 1em;
 }
+
+#circuit_name_search,
+#user_name_search {
+  border: 0;
+  box-shadow: none;
+
+  &:focus {
+    border: 0;
+    box-shadow: none;
+  }
+}
