--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -427,3 +427,56 @@ html {
     box-shadow: none;
   }
 }
+.list-circuit-validation {
+  padding: 2em;
+
+  .row-circuit {
+    cursor: pointer;
+  }
+}
+
+.circuit-validation {
+  padding: 2em;
+
+  .details-circuit-validation {
+
+    .name-details-circuit-validation {
+      background-color: #fe5e3a;
+      border-top-left-radius: 0.5em;
+      border-top-right-radius: 0.5em;
+      text-transform: uppercase;
+      font-weight: 700;
+      color: white;
+      padding: 1em;
+    }
+
+    .content-details-circuit-validation {
+      padding:1em;
+      background: white;
+    }
+  }
+
+  .step-circuit-validation{
+    border-radius: 0.3em;
+    background: $light-gray;
+    padding: 0.3em;
+
+    .name-step-circuit-validation {
+      font-weight: 700;
+    }
+
+    .content-step-circuit-validation {
+      background: white;
+      border-radius: 0.3em;
+      color: $dark-gray;
+      ul {
+        padding:0.5em 0em 0em 0.5em;
+      }
+      a {
+        color: $dark-gray;
+        float: right;
+        margin-right: 0.3em;
+      }
+    }
+  }
+}
