[evo] #1631 - voir la liste globale des classeurs de sa collectivité
 - add function sort
 - add function select checkbox
 - modify routes and security

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -365,7 +365,7 @@ html {
 .text-success {
   color: $success-color;
 }
-.text-danger {
+.text-warning {
   color: $warning-color;
 }
 .text-alert {
