[Evo] ref #1641 - add app version in footer
- #1642  add contact link in footer

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -763,3 +763,12 @@ $list-group-margin: $global-margin;
 .RichTextEditor__editor___1QqIU {
   height: 200px;
 }
+
+.app-infos {
+  text-align: center;
+  font-size: 0.7em;
+  font-weight: 700;
+  a {
+    color: #4a4c63;
+  }
+}
