--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -19,7 +19,7 @@ $sesile-color: (
 @include foundation-everything(true);
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
-
+@import './../../../../node_modules/react-datepicker/dist/react-datepicker.css';
 @import url("https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css");
 
 
