[Evo] ref #1612 - edit & add circuit validation

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -455,9 +455,6 @@ html {
     font-size: 0.875em;
     text-transform: uppercase;
   }
-  .doc-details-classeur {
-
-  }
   .infos-details-classeur {
     background: $white;
     padding: 1em;
@@ -534,22 +531,23 @@ html {
       background: white;
     }
   }
+}
 
-  .step-circuit-validation{
+.step-item{
     border-radius: 0.3em;
     background: $light-gray;
     padding: 0.3em;
 
-    .name-step-circuit-validation {
+    .name-step-item {
       font-weight: 700;
     }
 
-    .content-step-circuit-validation {
+    .content-step-item {
       background: white;
       border-radius: 0.3em;
       color: $dark-gray;
       ul {
-        padding:0.5em 0em 0em 0.5em;
+        padding:0.5em;
       }
       a {
         color: $dark-gray;
@@ -558,7 +556,6 @@ html {
       }
     }
   }
-}
 
 .parameters-user-group {
   .details-user-group {
@@ -640,7 +637,7 @@ html {
     padding-top:2em;
     padding-bottom:2em;
     background: white;
-    input {
+    input[type=text]  {
       width: 100%;
       padding:0.5em;
     }
@@ -742,6 +739,15 @@ $list-group-margin: $global-margin;
     color: white;
     padding: 1em;
     height: 3.5em;
+    input {
+      background: rgba(0, 0, 0, 0);
+      border: none;
+      outline: none;
+      text-transform: uppercase;
+      font-weight: 700;
+      color: white;
+      width: auto;
+    }
   }
 
   .admin-details-accordion-title {
@@ -777,4 +783,83 @@ $list-group-margin: $global-margin;
   a {
     color: map-get($sesile-color, 'dark-blue');
   }
+}
+
+.react-autosuggest__container {
+  position: relative;
+}
+
+.react-autosuggest__input {
+  width: 240px;
+  height: 30px;
+  padding: 10px 20px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  -webkit-appearance: none;
+}
+
+.react-autosuggest__input--focused {
+  outline: none;
+}
+
+.react-autosuggest__input::-ms-clear {
+  display: none;
+}
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 32px;
+  width: 280px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
+}
+
+.react-autosuggest__section-container {
+  border-top: 1px dashed #ccc;
+  max-height: 8em;
+  overflow-y: auto;
+}
+
+.react-autosuggest__section-container--first {
+  border-top: 0;
+}
+
+.react-autosuggest__section-title {
+  padding: 10px 0 0 10px;
+  font-size: 12px;
+  color: #777;
 }
